// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostMidMonad can bind a bunch of functions 1`] = `
MostMidMonad {
  "value": "FOO_SO_MID",
}
`;

exports[`MostMidMonad can use none to create a new Monad statically 1`] = `
MostMidMonad {
  "value": "_SO_MID",
}
`;

exports[`MostMidMonad can use some to create a new Monad statically 1`] = `
MostMidMonad {
  "value": "FOO_SO_MID",
}
`;
